--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ section {
   margin: auto;
 }
 
+.menu_container_circle {
+  display: flex;
+}
+
 .experience-work_container {
   display: flex;
   margin-left: 10px;
