--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ section {
   color: #e3ffeb;
 }
 
+.all-info {
+  display: flex;
+  flex-direction: column;
+}
+
 .all-info li {
   list-style-type: none;
 }
