--- a/style.css
+++ b/style.css
@@ -18,7 +18,46 @@ body {
     justify-content: flex-start;
 }
 
-/*-------Стили бля блока media--------------*/
+/*----------Стили для header (Три черных полосы)---------------------*/
+
+.lines {
+    position: relative;
+    margin: 0 0 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.first-black-line::before {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: -50px;
+    width: 30px;
+    height: 3px;
+    background-color: #000000;
+}
+
+.second-black-line::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: -56px;
+    width: 36px;
+    height: 3.5px;
+    background-color: #000000;
+}
+
+.third-black-line::before {
+    content: "";
+    position: absolute;
+    top: 40px;
+    left: -50px;
+    width: 30px;
+    height: 3px;
+    background-color: #000000;
+}
+
+/*---------Стили бля блока media--------------*/
 
 .main_media {
     display: flex;
