--- a/style.css
+++ b/style.css
@@ -254,28 +254,39 @@ body {
     background-color:#FFA501;
 }
 
+/*----------Стили для маленьких изображений--------------*/
+
 .work-info_img {
-    margin-top: 33px;
-    margin-left: 10px;
+    margin-top: 30px;
+    margin-left: 9px;
+    width: 30px;
+    height: 30px;
 }
 
 .work-info_img_1 {
-    margin-top: 33px;
-    margin-left: -35px;
+    margin-top: 28px;
+    margin-left: -40.5px;
+    width: 31px;
+    height: 31px;
+}
+
+.work-info_img_2 {
+    margin-top: 30px;
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
 }
 
 .web_img {
     content: "";
     position: absolute;
-    width: 40px;
-    height: 40px;
+    
 }
 
 .app-dev_img {
     content: "";
     position: absolute;
-    width: 40px;
-    height: 40px;
+    
 }
 
 .ux-ui_img {
