--- a/style.css
+++ b/style.css
@@ -2,63 +2,54 @@
 
 header {
     width: 100%;
-    height: 800px;
-    margin-bottom: -100px;
-}
-  
-body {
+    height: 100vh;
     background-image: url(src/Background/Background.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    font-family: 'Poppins', sans-serif;
+}
+  
+body {
     width: 100%;
-    height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 .main {
     display: flex;
-    justify-content: flex-start;
 }
 
 /*----------Стили для header (Три черных полосы)---------------------*/
 
-.little-icon {
-    width: 20px;
-    height: 20px;
-}
-
 .lines {
-    position: relative;
     margin: 0 0 0 auto;
     display: flex;
     flex-direction: column;
 }
 
-.first-black-line::before {
-    content: "";
-    position: absolute;
-    top: 20px;
-    left: -50px;
-    width: 30px;
-    height: 3px;
-    background-color: #000000;
-}
-
-.second-black-line::before {
-    content: "";
-    position: absolute;
+.black-line {
+    position: relative;
     top: 30px;
-    left: -56px;
+    left: -30px;
     width: 36px;
     height: 3.5px;
     background-color: #000000;
 }
 
-.third-black-line::before {
+.black-line::before {
     content: "";
     position: absolute;
-    top: 40px;
-    left: -50px;
+    top: -10px;
+    left: 6px;
+    width: 30px;
+    height: 3px;
+    background-color: #000000;
+}
+
+.black-line::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 6px;
     width: 30px;
     height: 3px;
     background-color: #000000;
@@ -108,19 +99,16 @@ body {
 }
 
 .main_h4 {
-    margin-left: 6px;
+    margin-left: 10px;
     margin-bottom: -17px;
-}
-
-.menu_container {
     position: relative;
 }
 
-.menu_container_title::before {
+.main_h4::before {
     content: "";
     position: absolute;
-    top: -8px;
-    left: -4px;
+    top: -7px;
+    left: -12px;
     z-index: -1;
     width: 36px;
     height: 36px;
@@ -130,6 +118,11 @@ body {
 
 .main_portfolio {
     background-color: #FFA501;
+    box-shadow: 0 4px 5px 1px #2c2b2b23;
+}
+
+.main_portfolio:hover {
+    background-color: #ff7801;
 }
 
 /*-------Стили для ссылок в блоке nav------*/
@@ -141,7 +134,7 @@ body {
 .main_nav a{
     color: "black";
     text-decoration: none;
-    padding: 12px;
+    padding: 13px 26px;
 }
   
 .main_nav a:visited {
@@ -196,7 +189,7 @@ body {
     margin-left: 8px;
 }
 
-.about-me_circle::before {
+.about-me_menu_container::before {
     content: "";
     position: absolute;
     top: -7px;
