--- a/no_style.css
+++ b/no_style.css
@@ -46,6 +46,7 @@ ol[class] {
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
   text-decoration-skip-ink: auto;
+  color:black;
 }
 
 /* Упрощаем работу с изображениями */
