--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ section {
 
 header {
     width: 100%;
-    height: 70vh;
+    height: 80vh;
     background-image: url(src/Background/Background.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
@@ -66,12 +66,11 @@ header {
 
 /*---------Стили бля блока media--------------*/
 
-
 .main_media { 
     display: flex;
     flex-direction: row;
     margin-left: -100px;
-    margin-top: 0px;
+    margin-top: 100px;
     transform: rotate(-90deg);
     max-height: 120px;
     position: relative; 
@@ -142,7 +141,7 @@ header {
 }
 
 .main_nav a{
-    color: "black";
+    color:inherit;
     text-decoration: none;
     padding: 13px 26px;  /*Задаем отступы от текста внутри кнопки*/ 
 }
