--- a/style.css
+++ b/style.css
@@ -564,7 +564,9 @@ header {
     padding-left: 15px;
 }
 
-.skills_scale div::before {
+/*-------Большие оранжевые круги у заголовков------------*/
+
+.skills_scale h5::before {
     content: "";
     position: absolute;
     top: -9px;
@@ -574,6 +576,174 @@ header {
     height: 36px;
     border-radius: 100%;
     background-color:#FFA501;
+}
+
+/*----------Шкала для Создания сайтов------------*/
+
+.sites {
+    position: relative;
+}
+
+.sites::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+/*-----------Шкала для Создания приложений------------*/
+
+.apps {
+    position: relative;
+}
+
+.apps::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 85%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+.apps::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#dddad6;
+}
+
+/*---------Шкала для Работы с данными----------*/
+
+.data {
+    position: relative;
+}
+
+.data::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 90%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+.data::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#dddad6;
+}
+
+/*------------Шкала для Креативности---------------*/
+
+.creativity {
+    position: relative;
+}
+
+.creativity::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 75%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+.creativity::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#dddad6;
+}
+
+/*---------Шкала для Создания дизайна----------*/
+
+.design {
+    position: relative;
+}
+
+.design::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 90%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+.design::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#dddad6;
+}
+
+/*---------Шкала для Soft Skills-----------*/
+
+.soft-skills {
+    position: relative;
+}
+
+.soft-skills::before {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -1;
+    width: 90%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#FFA501;
+}
+
+.soft-skills::after {
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    z-index: -2;
+    width: 100%;
+    height: 10px;
+    border-radius: 4px;
+    background-color:#dddad6;
 }
 
 
